--- a/front/android/app/src/main/res/values/strings.xml
+++ b/front/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">collabothon</string>
+    <string name="app_name">Słonikowy świat</string>
     <string name="title_activity_main">collabothon</string>
     <string name="package_name">io.ionic.collabothon</string>
     <string name="custom_url_scheme">io.ionic.collabothon</string>
